fix: audio article white space between player and headline

--- a/ArticleTemplates/assets/scss/garnett-layout/_article--audio.scss
+++ b/ArticleTemplates/assets/scss/garnett-layout/_article--audio.scss
@@ -14,10 +14,6 @@
             position: relative;
             z-index: 1; // this is so it sits over the canvas background element;
             padding-right: 0;
-            padding-bottom: base-px(7); // To avoid clashing with meta bar
-            @include mq($from:col2) {
-                padding-bottom: 0;
-            }
         }
 
         .headline {
@@ -29,13 +25,6 @@
         .meta {
             margin-bottom: 1px; // Prevents header showing 1px scroll weirdness
             border-bottom: 0;
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            @include mq($from:col2) {
-                position: static;
-            }
         }
     }
 
