--- a/ArticleTemplates/assets/scss/garnett-type/_media-audio.scss
+++ b/ArticleTemplates/assets/scss/garnett-type/_media-audio.scss
@@ -54,8 +54,11 @@
             display: block;
         }
 
+        .cutout__container {
+            background-color: inherit;
+        }
+
         .headline {
-            margin-top: base-px(.5);
             color: color(shade-7);
 
             .headline__accent {
